2012-01-05
 * EVENT_WRITE_IMAGE_ONLY
 * write_headers executor command

2011-12-29
 * Rts2Conn->Connection,Rts2Command->Command,..

2011-12-26
 * expansion in templates

2011-12-22
 * version in manual pages is taken from autoconf

2011-12-16
 * multiple filter wheel support

2011-12-15
 * added runscript call
 * cleaned rts2script library (moved more classes to rts2script namespace)

2011-12-10
 * created rts2script library in lib directory (moved from src/plan)

2011-11-26
 * telescope_speed, filter_movement and readout_time configutation options

2011-11-25
 * added daemon's --autorestart parameter

2011-11-04
 * close_for command for dome

2011-10-28
 * print expected number of images of a script

2011-10-27
 * RTS2_DT_DEG_DIST_180 flag

2011-10-26
 * default channel in events file

2011-10-25
 * added corrwerr command (for image processing scripts)

2011-10-06
 * telescope model parameters visible in telescope device

2011-10-03
 * elementPosition and supporting operations

2011-09-26
 * bool, onoff values

2011-09-25
 * switchCooling, coolingOnOff in camd

2011-09-23
 * raiseHWError, clearHWError

2011-09-22
 * initHardware method

2011-09-10
 * moved to .so libraries

2011-09-08
 * change_constraints API

2011-09-04
 * Moved libs to lib directory
 * Startup and Shutdown states

2011-08-14
 * DEVICE_NEED_RELOAD state

2011-07-30
 * cnst_alt and cnst_alt_v API calls

2011-07-28
 * Added --noauth device option

2011-07-17
 * Rotator device type, Pyxis Optec rotator driver

2011-07-06
 * Added support for AstroHaven Enterprises domes 

2011-07-06
 * Added Tbalance BigNG Fan/Temp control module

2011-07-02
 * Added notvisible option for GRBd (to control recording of targets never visible from observatory location)

2011-07-01
 * API for selecting targets by labels

2011-06-30
 * first release of simulator capability

2011-06-16
 * getSatisfiedIntervals method

2011-05-20
 * Meade LX200 driver split from generic LX200

2011-05-18
 * inotify for constraints
