@@ -1,3 +1,6 @@
+2012-01-06
+ * added proper motion
+
 2012-01-05
  * EVENT_WRITE_IMAGE_ONLY
  * write_headers executor command
